# osb-model-validation

./: .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  ci_versions.yml  python-publish.yml
omv/: __init__.py  autogen.py  experiment.py  find_tests.py  omt_mep_parser.py  omv_util.py  parse_omt.py  tally.py  test_finder.py
omv/analyzers/: __init__.py  activation.py  analyzer.py  dryrun.py  input_resistance.py  morphology.py  rates.py  resting.py  spikes.py  temperature.py  timeseries.py
omv/backends/: __init__.py  backend.py  brian.py  brian1.py  genesis.py  getbrian.py  getbrian1.py  getgenesis.py  getjlems.py  getjnml.py  getnest.py  getnrn.py  getpylems.py  getpynn.py  jlems.py  jneuroml.py  jneuromlbrian.py  jneuromlnrn.py  jneuromlvalidate.py  jneuromlvalidatev1.py  lems.py  nest.py  neuron.py  pylems.py  pylemsnml2.py  pynn.py  pynnbrian1.py  pynnnest.py  pynnneuron.py
omv/common/: inout.py  io.py  output.py  yaml.py
omv/engines/: __init__.py  arbor_.py  brian1.py  brian2_.py  eden_.py  engine.py  genesis.py  getarbor.py  getbrian1.py  getbrian2.py  geteden.py  getgenesis.py  getjlems.py  getjnml.py  getlibsbml.py  getmoose.py  getnest.py  getnetpyne.py  getneuroconstruct.py  getnml2.py  getnrn.py  getoctave.py  getpylems.py  getpyneuroml.py  getpynn.py  getxpp.py  jlems.py  jneuroml.py  jneuromlbrian.py  jneuromlbrian2.py  jneuromleden.py  jneuromlmoose.py  jneuromlnetpyne.py  jneuromlnetpyne_np2.py  jneuromlnetpyne_np4.py  jneuromlnrn.py  jneuromlpynnnrn.py  jneuromlvalidate.py  jneuromlvalidatev1.py  jneuromlxpp.py  (+25 more)
omv/schemata/: mep.yaml
omv/test/: test_rates.py  test_types.py  test_types.py~
omv/validation/: rx_validator.py  utils.py  validate.py  validate_mep.py
templates/: test_all.py  testall.py  travis.yml.template
utilities/: getcoreosbprojects.sh  test_all_osb_projects.py  travis-conda-setup.sh  travis_conda.py
utilities/tests/: .test.arbor.omt  .test.brian.omt  .test.brian2.omt  .test.eden.omt  .test.ex5.jnml.omt  .test.ex5.jnmleden.omt  .test.ex5.jnmlmoose.2.omt  .test.ex5.jnmlmoose.omt  .test.ex9.jnml.omt  .test.ex9.jnmlbrian.omt  .test.ex9.jnmlbrian2.omt  .test.ex9.jnmleden.omt  .test.ex9.jnmlnrn.omt  .test.ex9.jnmlxpp.omt  .test.ex9.pylems.omt  .test.ex9.pynml.omt  .test.exIzh.jnml.omt  .test.exIzh.jnmleden.omt  .test.exIzh.jnmlnetpyne.omt  .test.exIzh.jnmlnrn.omt  .test.exIzh.jnmlpynnnrn.omt  .test.exIzh.mep  .test.genesis.omt  .test.jlems.omt  .test.moose.2.omt  .test.moose.omt  .test.nca.pynmlxpplems.omt  .test.nestsli.omt  .test.netpyne.omt  .test.neuron.omt  .test.octave.mep  .test.octave.omt  .test.pylems.2.omt  (+39 more)
(+49 files in other folders)
