[metadata]
name = OSBModelValidation
version = 0.2.12
author = Boris Marin, Padraig Gleeson
author_email = borismarin@gmail.com
url = https://github.com/OpenSourceBrain/osb-model-validation
license = LGPL-3.0-only
description = Open Source Brain Model validation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    PyYAML
    numpy
    pyrx
    pathlib; python_version<'3.4'
    docopt
    importlib-metadata; python_version<'3.8'

packages = find:

[options.packages.find]
where = .
include = omv*

[options.entry_points]
console_scripts =
    omv                 = omv.omv_util:main

[options.package_data]
* =
        *.yaml
        *.g


[flake8]
ignore = E501, E502, F403, F405
